[package]
authors = ["i@k4yt3x.com", "Mick Koch <mick@kochm.co>"]
categories = ["command-line-utilities"]
description = "Trunking-aware, RasPi-ready P25 receiver daemon using RTL-SDR"
edition = "2021"
homepage = "https://github.com/k4yt3x/p25rx"
keywords = ["p25", "radio"]
license = "GPL-2.0-only"
name = "p25rx"
readme = "README.md"
repository = "https://github.com/k4yt3x/p25rx"
version = "2.0.0"

[profile.dev]
opt-level = 3

[profile.release]
lto = true
panic = "abort"
strip = "symbols"

[dependencies]
anyhow = "1.0"
arrayvec = "0.3"
chan = "0.1"
chrono = "0.2"
clap = { version = "4.0", features = ["derive"] }
collect_slice = "1.2"
crossbeam = "0.2"
demod_fm = "1.0"
env_logger = "0.5"
fnv = "1.0"
libc = "0.2"
log = "0.4"
mio = "0.6"
mio-extras = "2.0"
moving_avg = "0.1"
num = "0.1"
prctl = "1.0"
rand = "0.3"
rtlsdr_iq = "0.1"
rtlsdr_mt = "2.0"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
slice-cast = "0.1"
slice_mip = "1.0"
static_fir = "0.2"
uhttp_chunked_write = "0.5"
uhttp_json_api = "0.6"
uhttp_method = "0.10"
uhttp_response_header = "0.5"
uhttp_sse = "0.5"
uhttp_status = "0.10"
uhttp_uri = "0.5"
uhttp_version = "0.6"

imbe = { version = "1.0.0", git = "https://github.com/k4yt3x/imbe.rs" }
p25 = { version = "1.0.0", git = "https://github.com/k4yt3x/p25.rs", features = [ "ser"] }
p25_filts = { version = "1.0.0", git = "https://github.com/k4yt3x/p25_filts.rs" }
pool = { version = "0.1.3", git = "https://github.com/k4yt3x/pool" }
static_decimate = { version = "1.0.0", git = "https://github.com/k4yt3x/static_decimate.rs" }
throttle = { version = "1.0.0", git = "https://github.com/k4yt3x/throttle.rs" }
